<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B52ECC"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/you_are_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <RadioButton
            android:id="@+id/student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/student"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:onClick="onRoleButtonChecked"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/teacher"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:onClick="onRoleButtonChecked"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:id="@+id/others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="onRoleButtonChecked"
            android:text="@string/others"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />
    </RadioGroup>


</LinearLayout>