<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="401dp"
            android:layout_height="200dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.306"
            app:srcCompat="@drawable/logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/cardview_shadow_start_color"
            android:padding="20dp">

            <ImageView
                android:id="@+id/person"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_person_24" />


            <TextView
                android:id="@+id/hey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/person"
                android:fontFamily="sans-serif-black"
                android:includeFontPadding="false"
                android:text="Hey! "
                android:textSize="20dp" />

            <TextView
                android:id="@+id/welcomeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hey"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/person"
                android:text="@string/shailab"
                android:textSize="20dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="347dp"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/UserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:text="shailab" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/ipbregisterednumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_confirmation_number_24"
                    android:drawablePadding="10dp"
                    android:text="25894" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:text="shailab@gmail.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<Button
                android:id="@+id/update"
                android:layout_width="220dp"
                android:layout_height="52dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:text="Update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gotohome"
                tools:ignore="MissingConstraints" />-->


        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logout"
                android:layout_width="110dp"
                android:layout_height="52dp"
                android:text="Logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gotohome"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/ipbeacon"
                android:layout_width="110dp"
                android:layout_height="52dp"
                android:layout_alignParentRight="true"
                android:text="Home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gotohome"
                tools:ignore="MissingConstraints,UnknownId" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="168dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="400dp" />
        </RelativeLayout>
    </LinearLayout>



</ScrollView>
